--- a/.github/workflows/vprofile_action.yaml
+++ b/.github/workflows/vprofile_action.yaml
@@ -42,6 +42,7 @@ jobs:
 
 
   Build_and_publish:
+        needs: Build_vprofile
         runs-on: ubuntu-latest
         steps:
          - name: Check out the code
@@ -59,7 +60,7 @@ jobs:
               access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
               secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
               registry: ${{ secrets.REGISTRY }}
-              repo: actapp
+              repo: vproappimg
               region: ${{ env.AWS_REGION }}
               tags: latest,${{ github.run_number }}
               daemon_off: false
