--- a/kubedefs/dbpv.yml
+++ b/kubedefs/dbpv.yml
@@ -12,4 +12,4 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   storageClassName: default
   hostPath:
-    path: /mnt/data/db
+    path: /dbvolume
